--- a/form.html
+++ b/form.html
@@ -105,5 +105,6 @@
             <button type="submit">Dapatkan Rekomendasi</button>
         </form>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
