--- a/form.html
+++ b/form.html
@@ -104,7 +104,9 @@
             
             <button type="submit">Dapatkan Rekomendasi</button>
         </form>
+        <div id="recommendation"></div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
