--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
         <p>Temukan film yang cocok untukmu berdasarkan kepribadian, mood, dan genre favoritmu!</p>
         <a href="form.html" class="btn">Mulai Sekarang</a>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
