--- a/form.html
+++ b/form.html
@@ -92,8 +92,14 @@
                 <option value="esfp">ESFP</option>
             </select>
 
-            <label for="age">Umur:</label>
-            <input type="number" id="age" required>
+            <label for="umur">Pilih umur Anda:</label>
+            <select id="mood" required>
+                <option value="">Pilih umur</option>
+                <option value="SU">anak anak</option>
+                <option value="sad">Sedih</option>
+                <option value="excited">Terpacu</option>
+                <option value="calm">Tenang</option>
+            </select>
 
             <label for="mood">Pilih Mood Anda:</label>
             <select id="mood" required>
